--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src = "circle-cropped2.png" alt = "Vishesh Mehta's Photo"></td>
+      <td><img src = "https://hosting.photobucket.com/images/i/Ramu_kaki/Vishesh(2).png?width=450&height=278&fit=bounds&crop=fill" alt = "Vishesh Mehta's Photo"></td>
       <td><h1>Vishesh Mehta</h1>
       <p><em>Founder and CEO of the <strong><a href="http://www.focusreality.in/shalin_heights5.html">V Soft</a></strong>.</em></p>
       <p>I am an iOS and Web Developer. Reading Books and playing Keyboard is my hobby.</p></td>
